# cppmark

./: README.md  meson.build  scripts.sh
src/: cppmark.cpp  cppmark.hpp
subprojects/: ut.wrap
test/: spec_test.cpp
